Working on recycler view for notes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
   <string name="list_fragment_name">All Notes</string>
   <string name="title_hint">Title</string>
+  <string name="description_hint">Description</string>
 </resources>
