--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
   <string name="list_fragment_name">All Notes</string>
   <string name="title_hint">Title</string>
   <string name="description_hint">Description</string>
+  <string name="details_fragment_label">Notes Details</string>
 </resources>
