--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
   <string name="description_hint">Description</string>
   <string name="details_fragment_label">Notes Details</string>
   <string name="camera_permission_explanation">If Permission to use camera is granted, images can be captured and attached to notes</string>
+  <string name="capture_directory">captures</string>
 </resources>
