Edit details fragment in progress

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
   <string name="details_fragment_label">Notes Details</string>
   <string name="camera_permission_explanation">If Permission to use camera is granted, images can be captured and attached to notes</string>
   <string name="capture_directory">captures</string>
+  <string name="edit_note_description">Edit Note</string>
+  <string name="add_photo_description">Add Photo</string>
+  <string name="save_changes_description">Save changes</string>
+  <string name="cancel_description">Cancel</string>
 </resources>
