--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
   <string name="add_photo_description">Add Photo</string>
   <string name="save_changes_description">Save changes</string>
   <string name="cancel_description">Cancel</string>
+  <string name="add_note_description">Create New Note</string>
 </resources>
