Google SignIn integrated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
   <string name="save_changes_description">Save changes</string>
   <string name="cancel_description">Cancel</string>
   <string name="add_note_description">Create New Note</string>
+  <string name="sign_in_failure_message">Unable to sign in in with credentials</string>
+  <string name="sign_out_title">Sign Out</string>
 </resources>
